scripts/nullness/original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/PieceISZ.java:16: error: [method.invocation] call to rotateNoCheck() not allowed on the given receiver.
            rotateNoCheck();
                         ^
  found   : @UnderInitialization(karlney.tetris.core.PieceISZ.class) @NonNull PieceISZ
  required: @Initialized @NonNull PieceISZ
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/AbstractPiece.java:56: error: [method.invocation] call to rotateNoCheck() not allowed on the given receiver.
            rotateNoCheck();
                         ^
  found   : @UnderInitialization(karlney.tetris.core.AbstractPiece.class) @NonNull AbstractPiece
  required: @Initialized @NonNull AbstractPiece
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:17: error: [assignment] incompatible types in assignment.
    private final Thread t = new Thread(this);
                             ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:17: error: [argument] incompatible argument for parameter target of Thread constructor.
    private final Thread t = new Thread(this);
                                        ^
  found   : @UnderInitialization @NonNull Player
  required: @Initialized @Nullable Runnable
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:45: error: [method.invocation] call to updateDistribution(karlney.tetris.core.PieceType) not allowed on the given receiver.
        updateDistribution(currentPiece.getSquare(0, 0).getType());
                          ^
  found   : @UnderInitialization(karlney.tetris.core.Player.class) @NonNull Player
  required: @Initialized @NonNull Player
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:73: error: [argument] incompatible argument for parameter arg0 of Logger.error.
                log.error(e.getMessage());
                                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:118: error: [argument] incompatible argument for parameter e of UnableToPlacePieceException constructor.
            throw new UnableToPlacePieceException("The next piece "+currentPiece+" could not be placed on the board. This means GAME OVER.",null);
                                                                                                                                            ^
  found   : null (NullType)
  required: @Initialized @NonNull Exception
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name
    public HighScorePost(){}
           ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:32: error: [initialization.static.field.uninitialized] static field name not initialized
    static String name, outputfile = "highscore.dat";
                  ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:76: error: [initialization.fields.uninitialized] the constructor does not initialize fields: exitCmd, newGameCmd, pauseCmd, changeLevelCmd, showHighscoreCmd, nextLvlCmd, prevLvlCmd, game
    public TetrisGameSwing(){
           ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:77: error: [method.invocation] call to initGraphics() not allowed on the given receiver.
        initGraphics();
                    ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @NonNull TetrisGameSwing
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:78: error: [argument] incompatible argument for parameter target of Thread constructor.
        new Thread(this).start();
                   ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @Nullable Runnable
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:78: error: [method.invocation] call to start() not allowed on the given receiver.
        new Thread(this).start();
                              ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:79: error: [method.invocation] call to newGame() not allowed on the given receiver.
        newGame();
               ^
  found   : @UnderInitialization(javax.swing.JPanel.class) @NonNull TetrisGameSwing
  required: @Initialized @NonNull TetrisGameSwing
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:98: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().setBorderPainted(false);
                      ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:118: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().add(m1);
                      ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:119: error: [dereference.of.nullable] dereference of possibly-null reference jf.getJMenuBar()
        jf.getJMenuBar().setBackground(new Color(0,0,0));
                      ^
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:19: error: [assignment] incompatible types in assignment.
    private Piece destinationPiece = null;
                                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Piece
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:73: error: [argument] incompatible argument for parameter arg0 of Logger.info.
                log.info(e.getMessage());
                                     ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:81: error: [assignment] incompatible types in assignment.
        destinationPiece = null;
                           ^
  found   : null (NullType)
  required: @Initialized @NonNull Piece
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:103: error: [assignment] incompatible types in assignment.
        private Thread t = new Thread(this);
                           ^
  found   : @UnderInitialization(java.lang.Thread.class) @NonNull Thread
  required: @Initialized @NonNull Thread
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:103: error: [argument] incompatible argument for parameter target of Thread constructor.
        private Thread t = new Thread(this);
                                      ^
  found   : @Initialized @NonNull AIPlayer.@UnderInitialization @NonNull AIThread
  required: @Initialized @Nullable Runnable
../original/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/ElAshiEvaluatorTest.java:51: error: [argument] incompatible argument for parameter nextPiece of OnePieceNoPathCheckPiecePlacer.bestPlacement.
                .bestPlacement(new ElAshiTetrisBoardEvaluator(), boardBefore, piece, null);
                                                                                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Piece
23 errors
